manifests/networking/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: system-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    argocd.argoproj.io/sync-wave: "2"
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      hostname: "*.urosevicvuk.dev"
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: "*.urosevicvuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-urosevicvuk-dev-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: web-raf
      port: 8000
      protocol: HTTP
      hostname: "*.raf-project.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure-raf
      port: 8443
      protocol: HTTPS
      hostname: "*.raf-project.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-raf-project-com-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: web-morel
      port: 8000
      protocol: HTTP
      hostname: "morel.rs"
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure-morel
      port: 8443
      protocol: HTTPS
      hostname: "morel.rs"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-morel-rs-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
